--- a/layouts/partials/widgets/markdown.html
+++ b/layouts/partials/widgets/markdown.html
@@ -1,8 +1,11 @@
-{{- $p := .widget -}} {{- $c := (index $p.Params "content" | default dict) -}}
+<!-- layouts/partials/widgets/markdown.html -->
 <section class="py-12">
-  {{ with (index $c "title") }}
-  <h2 class="text-3xl font-semibold mb-4">{{ . }}</h2>
-  {{ end }} {{ with (index $c "text") }}
-  <div class="prose dark:prose-invert max-w-none">{{ . | markdownify }}</div>
-  {{ end }}
+  <div class="max-w-3xl mx-auto px-6 text-center">
+    {{ with (index .widget.Params.content "title") }}
+      <h2 class="text-2xl md:text-3xl font-semibold mb-4">{{ . }}</h2>
+    {{ end }}
+    {{ with (index .widget.Params.content "text") }}
+      <div class="prose dark:prose-invert mx-auto">{{ . | markdownify }}</div>
+    {{ end }}
+  </div>
 </section>
