--- a/layouts/partials/home_widgets.html
+++ b/layouts/partials/home_widgets.html
@@ -1,5 +1,15 @@
 {{- $lang := .Lang | default "ko" -}}
-{{- $sectionName := .Section | default "home" -}}
+
+{{/* ✔ 섹션명 계산: 홈이면 'home', 아니면 현재 섹션(.Section),
+      그리고 비어있으면 최종적으로 'home'로 안전하게 처리 */}}
+{{- $sectionName := .Section -}}
+{{- if .IsHome -}}
+  {{- $sectionName = "home" -}}
+{{- end -}}
+{{- if not $sectionName -}}
+  {{- $sectionName = "home" -}}
+{{- end -}}
+
 {{- $sec := site.GetPage (printf "/%s/%s" $lang $sectionName) -}}
 
 <section class="container mx-auto px-6">
@@ -8,22 +18,15 @@
       content/{{ $lang }}/{{ $sectionName }}/index.md 를 찾을 수 없습니다.
     </div>
   {{- else -}}
-    {{/* leaf 번들에서는 자식 .md가 Pages가 아니라 Resources 입니다. */}}
     {{- $all := $sec.Resources.Match "**.md" | default (slice) -}}
-
-    {{/* index.md 제외 + widget 파라미터 있는 파일만 */}}
     {{- $widgets := where (where $all "File.BaseFileName" "!=" "index") "Params.widget" "!=" nil | default (slice) -}}
-
     {{- if eq (len $widgets) 0 -}}
-      <div class="text-red-600 py-12">
-        {{ $sectionName }} 폴더에 위젯(.md) 파일이 없습니다.
-      </div>
+      <div class="text-red-600 py-12">{{ $sectionName }} 폴더에 위젯(.md) 파일이 없습니다.</div>
     {{- else -}}
-      {{- /* weight 순 정렬 (없으면 100 취급) */}}
       {{- $sorted := sort $widgets "Params.weight" "asc" -}}
       {{- range $p := $sorted -}}
         {{- $w := lower (printf "%v" (index $p.Params "widget")) -}}
-        {{- $wfile := replace $w "." "_" -}} {{/* about.avatar → about_avatar */}}
+        {{- $wfile := replace $w "." "_" -}}  {{/* about.avatar → about_avatar */}}
         {{- $partial := printf "widgets/%s.html" $wfile -}}
         {{- if templates.Exists (printf "partials/%s" $partial) -}}
           {{ partial $partial (dict "page" . "widget" $p) }}
